--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://<username>:<password>@sandbox.jadwj.mongodb.net/meanStackExample?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://dao-development:N5MCrpYZHiuuCfId@development-dao.62md26n.mongodb.net/?retryWrites=true&w=majority
